trunk/Archive2/0a/40708147c74f30/output
main.cpp: In function 'int main(int, char**)':
main.cpp:20:16: error: 'put_time' is not a member of 'std'
   std::cout << std::put_time(&me, "%H");
                ^
main.cpp:21:16: error: 'put_time' is not a member of 'std'
   std::cout << std::put_time(&him, "\t%H\n");
                ^
